--- a/Lab4DigitalClock/DigitalClock.qsf
+++ b/Lab4DigitalClock/DigitalClock.qsf
@@ -19,7 +19,7 @@
 #
 # Quartus Prime
 # Version 20.1.1 Build 720 11/11/2020 SJ Lite Edition
-# Date created = 02:15:28  September 22, 2021
+# Date created = 22:57:18  September 23, 2021
 #
 # -------------------------------------------------------------------------- #
 #
@@ -41,28 +41,76 @@ set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY DigitalClock
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "02:15:28  SEPTEMBER 22, 2021"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:57:18  SEPTEMBER 23, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
-set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
+set_global_assignment -name VERILOG_FILE OneHzOut.v
+set_global_assignment -name VERILOG_FILE divideByTen.v
+set_global_assignment -name VERILOG_FILE divideBySix.v
+set_global_assignment -name VERILOG_FILE divideByFive.v
+set_global_assignment -name VERILOG_FILE divideByFifty.v
 set_global_assignment -name VERILOG_FILE DigitalClock.v
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VERILOG_FILE divideBySix.v
-set_global_assignment -name VERILOG_FILE divideByTen.v
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
+set_global_assignment -name VERILOG_FILE binary2seven.v
+set_location_assignment PIN_AF14 -to CLK_50_MHZ_GEN
+set_location_assignment PIN_AA14 -to Reset
+set_location_assignment PIN_V16 -to seconds
+set_location_assignment PIN_AE26 -to Hex0[0]
+set_location_assignment PIN_AE27 -to Hex0[1]
+set_location_assignment PIN_AE28 -to Hex0[2]
+set_location_assignment PIN_AG27 -to Hex0[3]
+set_location_assignment PIN_AF28 -to Hex0[4]
+set_location_assignment PIN_AG28 -to Hex0[5]
+set_location_assignment PIN_AH28 -to Hex0[6]
+set_location_assignment PIN_AJ29 -to Hex1[0]
+set_location_assignment PIN_AH29 -to Hex1[1]
+set_location_assignment PIN_AH30 -to Hex1[2]
+set_location_assignment PIN_AG30 -to Hex1[3]
+set_location_assignment PIN_AF29 -to Hex1[4]
+set_location_assignment PIN_AF30 -to Hex1[5]
+set_location_assignment PIN_AD27 -to Hex1[6]
+set_location_assignment PIN_AB23 -to Hex2[0]
+set_location_assignment PIN_AE29 -to Hex2[1]
+set_location_assignment PIN_AD29 -to Hex2[2]
+set_location_assignment PIN_AC28 -to Hex2[3]
+set_location_assignment PIN_AD30 -to Hex2[4]
+set_location_assignment PIN_AC29 -to Hex2[5]
+set_location_assignment PIN_AC30 -to Hex2[6]
+set_location_assignment PIN_AD26 -to Hex3[0]
+set_location_assignment PIN_AC27 -to Hex3[1]
+set_location_assignment PIN_AD25 -to Hex3[2]
+set_location_assignment PIN_AC25 -to Hex3[3]
+set_location_assignment PIN_AB28 -to Hex3[4]
+set_location_assignment PIN_AB25 -to Hex3[5]
+set_location_assignment PIN_AB22 -to Hex3[6]
+set_location_assignment PIN_AA24 -to Hex4[0]
+set_location_assignment PIN_Y23 -to Hex4[1]
+set_location_assignment PIN_Y24 -to Hex4[2]
+set_location_assignment PIN_W22 -to Hex4[3]
+set_location_assignment PIN_W24 -to Hex4[4]
+set_location_assignment PIN_V23 -to Hex4[5]
+set_location_assignment PIN_W25 -to Hex4[6]
+set_location_assignment PIN_V25 -to Hex5[0]
+set_location_assignment PIN_AA28 -to Hex5[1]
+set_location_assignment PIN_Y27 -to Hex5[2]
+set_location_assignment PIN_AB27 -to Hex5[3]
+set_location_assignment PIN_AB26 -to Hex5[4]
+set_location_assignment PIN_AA26 -to Hex5[5]
+set_location_assignment PIN_AA25 -to Hex5[6]
+set_location_assignment PIN_AB12 -to Time_Stop
+set_location_assignment PIN_AA15 -to Time_Set
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name VERILOG_FILE OneHzOut.v
-set_global_assignment -name VERILOG_FILE divideByFifty.v
-set_global_assignment -name VERILOG_FILE divideByFive.v
+set_location_assignment PIN_AE12 -to SW[9]
+set_location_assignment PIN_AD10 -to SW[8]
+set_location_assignment PIN_AC9 -to SW[7]
+set_location_assignment PIN_AE11 -to SW[6]
+set_location_assignment PIN_AD12 -to SW[5]
+set_location_assignment PIN_AD11 -to SW[4]
